Bug 65655 - FILEOPEN FILESAVE: 'Different Odd & Even Pages' flag lost
Summary: FILEOPEN FILESAVE: 'Different Odd & Even Pages' flag lost
Status: RESOLVED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
4.0.3.3 release
Hardware: Other Windows (All)
: medium normal
Assignee: Adam CloudOn
URL:
Whiteboard: BSA target:4.2.0 target:4.1.6
Keywords:
Depends on:
Blocks:
 
Reported: 2013-06-11 14:49 UTC by Adam CloudOn
Modified: 2014-03-04 11:53 UTC (History)
1 user (show)

See Also:
Crash report or crash signature:
Regression By:


Attachments
DOCX containing a non-blank odd footer and a blank even footer, and 'Different Odd & Even Pages' is turned on (13.43 KB, application/vnd.openxmlformats-officedocument.wordprocessingml.document)
2013-06-11 14:49 UTC, Adam CloudOn
Details

Note You need to log in before you can comment on or make changes to this bug.
Description Adam CloudOn 2013-06-11 14:49:27 UTC
Created attachment 80702 [details]
DOCX containing a non-blank odd footer and a blank even footer, and 'Different Odd & Even Pages' is turned on

Problem description: 
When opening a DOCX that has the following - the 'Different Odd & Even Pages' flag is lost:
If the DOCX has a non-blank Odd footer, and a blank EVEN footer, while the 'Different Odd & Even Pages' is turned on - in Word the Odd (left) page has a footer and the EVEN (right) page has no footer.
When you open the DOCX in LO - all the pages have the Odd footer. This is because LO assumes that if the EVEN footer is blank - than the 'Different Odd & Even Pages' flag should be ignored. This is wrong.

Steps to reproduce:
1. Open the attached DOCX in LO
2. The footer appears in all the pages (odd & even)
3. Save the DOCX as a NEW.DOCX
4. Open the NEW.DOCX in Word
5. The footer appears on all pages (instead of just in the odd pages) because the 'Different Odd & Even Pages' flag is turned off.

Current behavior:
'Different Odd & Even Pages' flag is ignored when importing, and so it is not saved when exported back to DOCX.

Expected behavior:
'Different Odd & Even Pages' flag should be imported correctly and exported, even if the 'EVEN' footer is blank. 
              
Operating System: Windows 8
Version: 4.0.3.3 release
Comment 1 Commit Notification 2013-06-13 07:46:21 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "master":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=db23f89b76cb61b215bcae5495eadba2b5ceace2

fdo#65655 : fix for Different_Odd_And_Even_Pages flag ignored



The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.
Comment 2 Igor Gnatenko 2013-06-21 11:31:49 UTC
commit from comment #1 fixed this problem
Comment 3 Commit Notification 2014-03-04 11:53:42 UTC
Adam Co committed a patch related to this issue.
It has been pushed to "libreoffice-4-1":

http://cgit.freedesktop.org/libreoffice/core/commit/?id=d8a395033c7d0c924ce5898b2e9b301dbde80b44&h=libreoffice-4-1

fdo#65655 : fix for Different_Odd_And_Even_Pages flag ignored


It will be available in LibreOffice 4.1.6.

The patch should be included in the daily builds available at
http://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
http://wiki.documentfoundation.org/Testing_Daily_Builds
Affected users are encouraged to test the fix and report feedback.