fdo#65655 : fix for Different_Odd_And_Even_Pages flag ignored

Change-Id: Icf9949bb00aa905d22aedfd8f2b297dfa89dfedb